# LLM-ASSISTANT-BACKEND

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  pyproject.toml
agents/: classifier.py  policies.py  router.py  schemas.py  utils.py
apps/api/: main.py
apps/api/routes/: assistant.py  rag.py  sql_qa.py
configs/: agent.yaml  chunking.yaml  db.yaml  embeddings.yaml  indexer.yaml  llm.yaml  pt_loader.yaml  qa.yaml
core/: llm_provider.py  settings.py
docker/: Dockerfile.api  Dockerfile.pipeline  docker-compose.yml
docker/postgres/: 00_roles.sql  01_schema.sql  02_seed.sql
scripts/: run_api.sh  run_full_pipeline.sh  run_pipeline.sh
tools/rag/chunking/: cli.py  export.py  models.py  policies.py  preprocess.py  splitters.py
tools/rag/embeddings/: cli.py  providers.py  utils.py
tools/rag/qa/: generator.py  prompt.py  qa_tool.py  retriever.py
tools/rag/sources/pt_portal/: cli.py  pipeline.py
tools/rag/sources/pt_portal/dedup/: exact_hash.py  near_dup.py
tools/rag/sources/pt_portal/fetch/: repo_loader.py
tools/rag/sources/pt_portal/normalize/: strategies.py
tools/rag/sources/pt_portal/parse/: markdown_parser.py
tools/rag/sources/pt_portal/storage/: doc_store.py  schema.py
tools/rag/stores/: base.py  indexer.py  qdrant_reader.py  qdrant_store.py
tools/sql/: models.py  prompts.py  query_tool.py  safety.py  schema.sql  seed_data.py  sql_tool.py  utils.py
