# path: pyproject.toml
[project]
name = "llm-assistant-backend"
version = "0.1.0"
description = "Backend service for multifunctional LLM assistant"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.30.0",
    "python-dotenv==1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"